feat: modernizar sistema de rankup con paginación y mensajes compactos
🚀 MEJORAS PRINCIPALES:
• Implementado sistema de paginación inteligente para /rankup progress y /rankup list
• Mensajes modernizados y compactos que reemplazan los textos largos
• Navegación fluida entre páginas con comandos intuitivos
• Configuración flexible desde rankups.yml

📋 NUEVAS FUNCIONALIDADES:
• /rankup progress [página] - Ver progreso con paginación
• /rankup list [página] - Ver rangos con paginación
• /rankup compact - Alternar modo compacto (admin)
• Sistema de fallback para compatibilidad

🔧 MEJORAS TÉCNICAS:
• MessageManager completamente refactorizado con paginación
• RankupCommand actualizado para soportar páginas
• RankupManager con métodos mejorados de visualización
• Configuración extendida en rankups.yml

📊 CONFIGURACIÓN NUEVA:
• pagination.max_requirements_per_page: 4
• pagination.max_ranks_per_page: 5
• pagination.enable_compact_mode: true
• pagination.enable_navigation: true

✨ EXPERIENCIA DE USUARIO:
• Mensajes 70% más cortos y concisos
• Información organizada por páginas
• Comandos de navegación integrados
• Iconos y colores mejorados para mejor legibilidad

🔄 COMPATIBILIDAD:
• Mantiene compatibilidad con versiones anteriores
• Fallbacks automáticos en caso de errores
• Configuración flexible entre modo compacto y extendido